test/expected/explain_co_less_i_b++default.out
explain bool operator<(int) const = default
           ^
12: error: default member relational operators must take one value or reference-to-const parameter to a class
